--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev":  "NODE_OPTIONS=\"--max_old_space_size=6096\" next",
+    "dev": "NODE_OPTIONS=\"--max_old_space_size=6096\" next",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -25,9 +25,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-loader-spinner": "^5.3.4",
     "react-loading-skeleton": "^3.3.1",
     "react-redux": "^8.1.1",
-    "react-spinners": "^0.13.8",
     "swiper": "^9.4.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
