--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-loading-skeleton": "^3.3.1",
     "react-redux": "^8.1.1",
     "resend": "^0.17.1",
+    "sharp": "^0.32.3",
     "swiper": "^9.4.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
