--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-icons": "^4.10.1",
     "react-loader-spinner": "^5.3.4",
     "react-loading-skeleton": "^3.3.1",
+    "react-player": "^2.12.0",
     "react-redux": "^8.1.1",
     "resend": "^0.17.1",
     "sharp": "^0.32.3",
