--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
     "@types/uuid": "^9.0.2",
+    "@vercel/analytics": "^1.0.2",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "eslint": "8.43.0",
